--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,html}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,html}\"",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
