--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,html}\"",
-    "postbuild": "next-sitemap"
+    "format": "prettier --write \"src/**/*.{js,jsx,html}\""
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
