--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+      { "source": "/(sitemap\\.xml|robots\\.txt)", "destination": "/$1" },
+      { "source": "/(.*)", "destination": "/index.html" }
+    ],
+    "headers": [
+      { "source": "/sitemap.xml", "headers": [{ "key": "Content-Type", "value": "application/xml" }] },
+      { "source": "/robots.txt", "headers": [{ "key": "Content-Type", "value": "text/plain" }] }
     ]
   }
