--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write \"src/**/*.{js,jsx,html}\""
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
